@@ -6,8 +6,9 @@
 <use name=root>
 <use name=PhysicsTools/UtilAlgos>
 <use name=FWCore/ServiceRegistry>
+<flags EDM_PLUGIN=1>
 <export>
-   <lib name=aachen3aACSusyAnalysis>
+   <lib name=SusyACSkimAnalysis>
    <use name=FWCore/Framework>
    <use name=FWCore/PluginManager>
    <use name=FWCore/ParameterSet>
