@@ -4,18 +4,20 @@
 
    Carsten Magass, January 2009
                    February 2009 (update)
+                   April 2009 (update)
 
 (1) Checkout UserCode/aachen3a/ACSusyAnalysis in <CMSSW>/src,
     then mv UserCode/aachen3a aachen3a (IMPORTANT !).
-    To compile SusyACSkimAnalysis.cpp use
+    Compile everything using 
       scramv1 b
     as usual.
-(2) Prepare submission to crab:
+(2) Goto /test directory. Prepare submission to crab:
     ./prepare.sh <datasetpath> <version> <tag>
     You might have to edit prepare.sh because there
     are some hardcoded things set 
     (like my dcms directory and email, or black/white list)
     This will create a directory CRAB-<tag>-<version>
+    if there are no error messages.
 (3) Just change to this directory, do
     crab -create and crab -submit
 (4) Wait until the job has finished, and check, if the output
