@@ -1,10 +1,0 @@
-<export></export>
-<use name=PhysicsTools/UtilAlgos>
-<use name=PhysicsTools/Utilities>
-<use name=DataFormats/HLTReco>
-<use name=DataFormats/PatCandidates>
-<use name=root>
-<use name=SimDataFormats/HepMCProduct>
-<library name=SusyAnalysisACSkim file=SusyACSkimAnalysis.cpp>
-  <flags EDM_PLUGIN=1>
-</library>
