@@ -1,7 +1,7 @@
 [CRAB]
 jobtype = cmssw
 scheduler = glite
-server_name = cern
+server_name = bari
 
 [CMSSW]
 #datasetpath = /SUSY_LM1-sftsht/Summer08_IDEAL_V9_v1/GEN-SIM-RECO
@@ -15,9 +15,10 @@ output_file = out.root
 return_data = 0
 email=magass@cern.ch
 copy_data = 1
-storage_element = grid-srm.physik.rwth-aachen.de
-storage_path = /pnfs/physik.rwth-aachen.de
-user_remote_dir = dcms/magass/dump/
+storage_element = T2_DE_RWTH
+#grid-srm.physik.rwth-aachen.de
+#storage_path = /pnfs/physik.rwth-aachen.de
+user_remote_dir = output/dump/lm0
 
 [EDG]
 #ce_black_list = in2p3,ifca,infn
